Minor problems fix

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <option value="0.15">15%</option>
                 <option value="0.2">20%</option>
             </select>
-
-            <button class="count">Calc</button>
+            
             <p class="error"></p>
-            <p class="cost-info">You should submit after <span class="cost"></span> <span class="currency-info"></span>.</p>
+            <p class="cost-info">Each person should pay <span class="cost"></span> <span class="currency-info"></span>.</p>
+            <button class="count">Calc</button>
         </div>
 
 
